[chromium] Ensure animations get ticked at least once when added. https://bugs.webkit.org/show_bug.cgi?id=86013

Patch by Ian Vollick <vollick@chromium.org> on 2012-05-09
Reviewed by James Robinson.

Source/WebCore:

Tested in
  CCLayerTreeHostTestTickAnimationWhileBackgrounded.runSingleThreaded
  CCLayerTreeHostTestAddAnimationWithTimingFunction.runSingleThreaded
  CCLayerTreeHostTestSynchronizeAnimationStartTimes.runSingleThreaded
  CCLayerTreeHostTestAnimationFinishedEvents.runSingleThreaded

* platform/graphics/chromium/LayerChromium.cpp:
(WebCore::LayerChromium::addAnimation):
* platform/graphics/chromium/cc/CCLayerAnimationController.cpp:
(WebCore::CCLayerAnimationController::pushNewAnimationsToImplThread):
* platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
(WebCore::CCLayerTreeHost::finishCommitOnImplThread):
(WebCore::CCLayerTreeHost::didAddAnimation):
(WebCore):
(WebCore::CCLayerTreeHost::didBecomeInvisibleOnImplThread):
* platform/graphics/chromium/cc/CCLayerTreeHost.h:
(CCLayerTreeHost):
* platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
(WebCore::CCLayerTreeHostImpl::CCLayerTreeHostImpl):
* platform/graphics/chromium/cc/CCProxy.h:
(CCProxy):
* platform/graphics/chromium/cc/CCSingleThreadProxy.cpp:
(CCSingleThreadProxyAnimationTimer):
(WebCore::CCSingleThreadProxyAnimationTimer::create):
(WebCore::CCSingleThreadProxyAnimationTimer::CCSingleThreadProxyAnimationTimer):
(WebCore):
(WebCore::CCSingleThreadProxy::CCSingleThreadProxy):
(WebCore::CCSingleThreadProxy::didAddAnimation):
(WebCore::CCSingleThreadProxy::doComposite):
* platform/graphics/chromium/cc/CCSingleThreadProxy.h:
(WebCore):
* platform/graphics/chromium/cc/CCThreadProxy.h:

Source/WebKit/chromium:

* tests/CCLayerTreeHostTest.cpp:
(WTF::CCLayerTreeHostTestTickAnimationWhileBackgrounded::animateLayers):
(WTF):

Canonical link: https://commits.webkit.org/103638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116594 268f45cc-cd09-0410-ab3c-d52691b4dbfc